[package]
name = "rendy-cache"
version = "0.5.1"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2018"

[dependencies]
rendy-core = { version = "0.5.1", path = "../core" }
rendy-resource = { version = "0.5.1", path = "../resource" }
rendy-memory = { version = "0.5.1", path = "../memory" }
#rendy-shader = { version = "0.5.1", path = "../shader" }
rendy-descriptor = { version = "0.5.1", path = "../descriptor" }

parking_lot = "0.9"
smallvec = "1.3"
fxhash = "0.2"
