[package]
name = "rendy-chain"
version = "0.3.1"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-chain"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's node synchronization tool"

[features]
profiler = ["thread_profiler/thread_profiler"]

[dependencies]
log = "0.4"
thread_profiler = "0.3"
rendy-core = { version = "0.3.0", path = "../core" }
