[package]
name = "rendy-command"
version = "0.5.1"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-command"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's queues and commands tools"

[features]
no-slow-safety-checks = ["rendy-core/no-slow-safety-checks"]
profiler = ["thread_profiler/thread_profiler"]

[dependencies]
relevant = { version = "0.4.0", features = ["log", "backtrace"] }
smallvec = "0.6"
rendy-core = { version = "0.5.1", path = "../core" }
thread_profiler = "0.3"
