[package]
name = "rendy-core"
version = "0.5.1"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-core"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's utilities"

[features]
serde-1 = ["serde", "gfx-hal/serde"]

# This list of features is common for many of rendy's crates
# All other crates should transitively enable feature for rendy-core crate
# and not rely on the feature being enabled for that crate directly.
# To conditionally enable token trees `rendy-core::with_*` macro should be used instead of
# `cfg` attributes.
empty = ["gfx-backend-empty"]
dx12 = ["gfx-backend-dx12"]
metal = ["gfx-backend-metal"]
# gl = ["gfx-backend-gl"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
gfx-hal = "0.5"
gfx-backend-empty = { version = "0.5", optional = true }
gfx-backend-gl = { version = "0.5", features = ["glutin"], default_features = false, optional = true }
lazy_static = "1.4.0"
log = "0.4.11"
parking_lot = "0.11.1"
serde = { version = "1", optional = true, features = ["derive"] }
raw-window-handle = "0.3.3"
derive_more = "0.99.11"
derivative = "2.2.0"

[target.'cfg(all(target_os = "windows", not(target_arch = "wasm32")))'.dependencies]
gfx-backend-dx12 = { version = "0.5", optional = true }

[target.'cfg(any(all(not(target_arch = "wasm32"), target_os = "macos"), all(target_arch = "aarch64", target_os = "ios")))'.dependencies]
gfx-backend-metal = { version = "0.5", optional = true }

[target.'cfg(all(any(target_os = "windows", all(unix, not(any(target_os = "macos", target_os = "ios")))), not(target_arch = "wasm32")))'.dependencies]
gfx-backend-vulkan = { version = "0.5", features = ["x11"], optional = true }
