[package]
name = "rendy-descriptor"
version = "0.4.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-descriptor"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's descriptor allocator"

[dependencies]
derivative = "1.0"
gfx-hal = { git = "https://github.com/gfx-rs/gfx", rev = "3d5db15661127c8cad8d85522a68ec36c82f6e69" }
log = "0.4"
relevant = { version = "0.4", features = ["log", "backtrace"] }
smallvec = "0.6"
