[package]
name = "rendy-descriptor"
version = "0.5.1"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-descriptor"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's descriptor allocator"

[dependencies]
gfx-hal = { git = "https://github.com/gfx-rs/gfx", rev = "3641183231f16877d4ea2fbdb2ff208ce736d6c4" }
log = "0.4"
relevant = { version = "0.4", features = ["log"] }
smallvec = "1.2"
