[package]
name = "rendy-factory"
version = "0.3.1"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-factory"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's factory tool"

[features]
serde-1 = [
    "serde",
    "rendy-memory/serde-1",
    "rendy-core/serde-1",
]
empty = ["rendy-core/empty"]
dx12 = ["rendy-core/dx12"]
gl = ["rendy-core/gl"]
metal = ["rendy-core/metal"]
vulkan = ["rendy-core/vulkan"]
no-slow-safety-checks = ["rendy-core/no-slow-safety-checks"]
profiler = ["thread_profiler/thread_profiler"]
wsi-winit = ["rendy-core/wsi-winit"]

[dependencies]
rendy-memory = { version = "0.3.0", path = "../memory" }
rendy-resource = { version = "0.3.0", path = "../resource" }
rendy-command = { version = "0.3.0", path = "../command" }
rendy-descriptor = { version = "0.3.0", path = "../descriptor" }
rendy-wsi = { version = "0.3.0", path = "../wsi" }
rendy-core = { version = "0.3.0", path = "../core" }

derivative = "1.0"
either = "1.0"
failure = "0.1"
log = "0.4"
parking_lot = "0.9"
relevant = { version = "0.4", features = ["log", "backtrace"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
smallvec = "0.6"
thread_profiler = "0.3"
