[package]
name = "rendy-factory"
version = "0.4.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-factory"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's factory tool"

[features]
serde-1 = [
    "serde",
    "rendy-memory/serde-1",
    "gfx-hal/serde",
]
empty = ["rendy-util/gfx-backend-empty"]
dx12 = ["rendy-util/gfx-backend-dx12"]
metal = ["rendy-util/gfx-backend-metal"]
vulkan = ["rendy-util/gfx-backend-vulkan"]
no-slow-safety-checks = ["rendy-util/no-slow-safety-checks"]
profiler = ["thread_profiler/thread_profiler"]

[dependencies]
rendy-memory = { version = "0.4.0", path = "../memory" }
rendy-resource = { version = "0.4.0", path = "../resource" }
rendy-command = { version = "0.4.0", path = "../command" }
rendy-descriptor = { version = "0.4.0", path = "../descriptor" }
rendy-wsi = { version = "0.4.0", path = "../wsi" }
rendy-util = { version = "0.4.0", path = "../util" }

gfx-hal = { git = "https://github.com/gfx-rs/gfx", rev = "3d5db15661127c8cad8d85522a68ec36c82f6e69" }
derivative = "1.0"
either = "1.0"
log = "0.4"
parking_lot = "0.9"
relevant = { version = "0.4", features = ["log", "backtrace"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
smallvec = "0.6"
thread_profiler = "0.3"
