[package]
name = "rendy-factory"
version = "0.5.1"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-factory"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's factory tool"

[features]
serde-1 = [
    "serde",
    "rendy-core/serde-1",
    "rendy-memory/serde-1",
]

empty = ["rendy-core/empty"]
dx12 = ["rendy-core/dx12"]
gl = ["rendy-core/gl"]
metal = ["rendy-core/metal"]
no-slow-safety-checks = ["rendy-core/no-slow-safety-checks"]
profiler = ["thread_profiler/thread_profiler"]

[dependencies]
rendy-memory = { version = "0.5.2", path = "../memory" }
rendy-resource = { version = "0.5.1", path = "../resource" }
rendy-command = { version = "0.5.1", path = "../command" }
rendy-descriptor = { version = "0.5.1", path = "../descriptor" }
rendy-wsi = { version = "0.5.1", path = "../wsi" }
rendy-core = { version = "0.5.1", path = "../core" }

either = "1.6.1"
log = "0.4.11"
parking_lot = "0.11.1"
relevant = { version = "0.4.2", features = ["log"] }
serde = { version = "1.0.118", optional = true, features = ["derive"] }
smallvec = "1.5.1"
thread_profiler = "0.3.0"
