[package]
name = "rendy-frame"
version = "0.4.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-frame"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's frame synchronization tool"

[features]
no-slow-safety-checks = ["rendy-util/no-slow-safety-checks"]
profiler = ["thread_profiler/thread_profiler"]

[dependencies]
rendy-command = { version = "0.4.0", path = "../command" }
rendy-factory = { version = "0.4.0", path = "../factory" }
rendy-memory = { version = "0.4.0", path = "../memory" }
rendy-resource = { version = "0.4.0", path = "../resource" }
rendy-util = { version = "0.4.0", path = "../util" }

derivative = "1.0"
either = "1.5"
gfx-hal = { git = "https://github.com/gfx-rs/gfx", rev = "a084a1f2fec6c9ed928c53e2dc8c1761782b9019" }
failure = "0.1"
log = "0.4"
relevant = { version = "0.4", features = ["log", "backtrace"] }
smallvec = "0.6"
thread_profiler = "0.3"
