[package]
name = "rendy-graph"
version = "0.5.1"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-graph"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's render graph"

[features]
empty = ["rendy-core/empty"]
dx12 = ["rendy-core/dx12"]
gl = ["rendy-core/gl"]
metal = ["rendy-core/metal"]
vulkan = ["rendy-core/vulkan"]
no-slow-safety-checks = ["rendy-core/no-slow-safety-checks"]
profiler = ["thread_profiler/thread_profiler"]

[dependencies]
rendy-chain = { version = "0.5.1", path = "../chain" }
rendy-command = { version = "0.5.1", path = "../command" }
rendy-descriptor = { version = "0.5.1", path = "../descriptor" }
rendy-factory = { version = "0.5.1", path = "../factory" }
rendy-frame = { version = "0.5.1", path = "../frame" }
rendy-memory = { version = "0.5.2", path = "../memory" }
rendy-resource = { version = "0.5.1", path = "../resource" }
rendy-core = { version = "0.5.1", path = "../core" }
rendy-wsi = { version = "0.5.1", path = "../wsi" }
rendy-shader = { version = "0.5.1", path = "../shader" }

either = "1.5"
bitflags = "1.2"
log = "0.4"
relevant = { version = "0.4", features = ["log"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
smallvec = "1.2"
thread_profiler = "0.3"
