[package]
name = "rendy-init"
version = "0.5.1"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-init"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's easy initialization tool"

[features]
empty = ["rendy-core/empty"]
dx12 = ["rendy-core/dx12"]
gl = ["rendy-core/gl"]
metal = ["rendy-core/metal"]
vulkan = ["rendy-core/vulkan"]
no-slow-safety-checks = ["rendy-core/no-slow-safety-checks"]

[dependencies]
rendy-command = { version = "0.5.1", path = "../command" }
rendy-factory = { version = "0.5.1", path = "../factory" }
rendy-core = { version = "0.5.1", path = "../core" }
rendy-wsi = { version = "0.5.1", path = "../wsi" }
winit = { git = "https://github.com/amethyst/winit.git", branch = "clone-events", version = "0.22", optional = true }
log = "0.4"
smallvec = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.6", features = [ "console", "Document", "Element", "HtmlElement", "Node", "Window" ] }
winit = { git = "https://github.com/amethyst/winit.git", branch = "clone-events", version = "0.22", optional = true, features = ["web-sys"] }
