[package]
name = "rendy-layout"
version = "0.1.0"
authors = ["omni-viral <scareaangel@gmail.com>"]

[dependencies]
bitflags = "1.0"
failure = "0.1"
serde = { version = "1.0", optional = true, features = ["derive"] }
smallvec = "0.6"
rendy-memory = { path = "../memory" }
rendy-resource = { path = "../resource" }

