[package]
name = "rendy-memory"
version = "0.4.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-memory"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's memory manager"

[features]
serde-1 = ["serde"]

[dependencies]
gfx-hal = { git = "https://github.com/gfx-rs/gfx", rev = "a084a1f2fec6c9ed928c53e2dc8c1761782b9019" }
derivative = "1.0"
failure = "0.1"
log = "0.4"
hibitset = {version = "0.6", default-features = false}
relevant = { version = "0.4", features = ["log", "backtrace"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
smallvec = "0.6"
slab = "0.4"
colorful = "0.2"

[dev-dependencies]
rand = "0.7"
