[package]
name = "rendy-memory"
version = "0.5.3"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-memory"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's memory manager"

[features]
serde-1 = ["serde", "gfx-hal/serde"]

[dependencies]
gfx-hal = { git = "https://github.com/gfx-rs/gfx", rev = "3641183231f16877d4ea2fbdb2ff208ce736d6c4" }
log = "0.4"
hibitset = {version = "0.6", default-features = false}
relevant = { version = "0.4", features = ["log"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
smallvec = "1.0"
slab = "0.4"
colorful = "0.2"

[dev-dependencies]
rand = "0.7"
