[package]
name = "rendy-memory"
version = "0.5.3"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-memory"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's memory manager"

[features]
serde-1 = ["serde", "gfx-hal/serde"]

[dependencies]
gfx-hal = "0.6.0"
log = "0.4.11"
hibitset = { version = "0.6.3", default-features = false }
relevant = { version = "0.4.2", features = ["log"] }
serde = { version = "1.0.118", optional = true, features = ["derive"] }
smallvec = "1.5.1"
slab = "0.4.2"
colorful = "0.2.1"

[dev-dependencies]
rand = "0.8.0"
