[package]
name = "rendy-mesh"
version = "0.5.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-mesh"
keywords = ["graphics", "gfx-hal", "rendy"]
description = "Rendy's mesh"
categories = ["rendering"]
readme = "README.md"

[features]
obj = ["wavefront_obj"]
serde-1 = ["serde", "serde_bytes", "smallvec/serde", "rendy-factory/serde-1"]
no-slow-safety-checks = ["rendy-core/no-slow-safety-checks"]

[dependencies]
rendy-command = { version = "0.5.0", path = "../command" }
rendy-memory = { version = "0.5.0", path = "../memory" }
rendy-resource = { version = "0.5.0", path = "../resource" }
rendy-factory = { version = "0.5.0", path = "../factory" }
rendy-core = { version = "0.5.0", path = "../core" }

serde = { version = "1.0", optional = true, features = ["derive"] }
wavefront_obj = { version = "6.0", optional = true }
smallvec = { version = "0.6" }
serde_bytes = { version = "0.11", optional = true }

log = "0.4.6"
