[package]
name = "rendy-mesh"
version = "0.5.1"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/amethyst/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-mesh"
keywords = ["graphics", "gfx-hal", "rendy"]
description = "Rendy's mesh"
categories = ["rendering"]
readme = "README.md"

[features]
obj = ["wavefront_obj"]
serde-1 = ["serde", "serde_bytes", "smallvec/serde", "rendy-factory/serde-1"]
no-slow-safety-checks = ["rendy-core/no-slow-safety-checks"]

[dependencies]
rendy-command = { version = "0.5.1", path = "../command" }
rendy-memory = { version = "0.5.2", path = "../memory" }
rendy-resource = { version = "0.5.1", path = "../resource" }
rendy-factory = { version = "0.5.1", path = "../factory" }
rendy-core = { version = "0.5.1", path = "../core" }

serde = { version = "1.0", optional = true, features = ["derive"] }
wavefront_obj = { version = "7.0", optional = true }
smallvec = "1.2"
serde_bytes = { version = "0.11", optional = true }

log = "0.4.6"
