[package]
name = "rendy-renderer"
version = "0.1.0"
authors = ["omni-viral <scareaangel@gmail.com>"]

[dependencies]
gfx-hal = { path = "../../gfx/src/hal" }
derivative = "1.0"
failure = "0.1"
log = "0.4"
relevant = "0.2"
winit = "0.17"

rendy-wsi = { path = "../wsi" }
rendy-factory = { path = "../factory" }
rendy-frame = { path = "../frame" }
